--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<span class="analyst__text">Нет оперативностив принятии решений?</span>
 				</div>
 			</div>
-			<div class="analyst__text">
+			<div class="analyst__text analyst__text-none">
 				<div class="analyst__play">
 					<img class="analyst__image" src="img/element.png" alt="">
 				</div>
@@ -256,7 +256,7 @@
 						Управление задачами
 					</div>
 				</div>
-				<div class="footer__block">
+				<div class="footer__block footer__block-mix">
 					<h3 class="footer__title">Модули:</h3>
 					<ul class="footer__items">
 						<li class="footer__link">Обслуживание</li>
@@ -274,7 +274,7 @@
 						<li class="footer__link">Prengi market</li>
 					</ul>
 				</div>
-				<div class="footer__block">
+				<div class="footer__block footer__block-mix">
 					<h3 class="footer__title">Отрасли:</h3>
 					<ul class="footer__items">
 						<li class="footer__link">Промышленность</li>
